--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "add-number",
-    "description": "This project is really great.",
-    "slug": "add-number",
+    "name": "Suli App",
+    "description": "One of Suli Products.",
+    "slug": "suli-app",
     "privacy": "public",
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
