--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
   "expo": {
     "name": "Suli App",
-    "description": "One of Suli Products.",
     "slug": "suli-app",
     "privacy": "public",
-    "sdkVersion": "28.0.0",
-    "platforms": ["ios", "android"],
+    "sdkVersion": "32.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
