--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^35.0.0",
-    "expo-constants": "^7.0.0",
-    "expo-font": "^7.0.0",
-    "expo-image-picker": "^7.0.0",
-    "expo-keep-awake": "^7.0.0",
-    "expo-permissions": "^7.0.0",
+    "expo": "^34.0.1",
+    "expo-constants": "~6.0.0",
+    "expo-font": "~6.0.1",
+    "expo-gl": "~6.0.0",
+    "expo-image-picker": "~6.0.0",
+    "expo-permissions": "~6.0.0",
+    "expo-three": "github:pav-an/expo-three#v1",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.1.tar.gz",
+    "three": "^0.108.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
