--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^34.0.1",
-    "expo-constants": "~6.0.0",
-    "expo-font": "~6.0.1",
-    "expo-gl": "~6.0.0",
-    "expo-image-picker": "~6.0.0",
-    "expo-permissions": "~6.0.0",
+    "expo": "^36.0.0",
+    "expo-constants": "~8.0.0",
+    "expo-font": "~8.0.0",
+    "expo-gl": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
+    "expo-media-library": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-three": "github:pav-an/expo-three#v1",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.1.tar.gz",
+    "react": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-view-shot": "3.0.2",
     "three": "^0.108.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^7.0.0"
   },
   "private": true
 }
