--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "expo": "expo start",
     "postinstall": "jetify"
   },
   "dependencies": {
