--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "postinstall": "jetify"
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
+    "react-native": "0.59.10",
+    "react-native-gesture-handler": "~1.4.1",
+    "react-native-reanimated": "~1.3.0",
+    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-unimodules": "0.6.0",
+    "react-native-web": "^0.11.7",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-image-picker": "^7.0.0",
     "expo-keep-awake": "^7.0.0",
-    "expo-permissions": "^7.0.0",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
+    "expo-permissions": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "babel-jest": "24.9.0",
+    "jest": "24.9.0",
+    "jetifier": "^1.6.4",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react-test-renderer": "16.9.0",
     "babel-preset-expo": "^5.0.0"
   },
   "private": true
