--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "expo": "^35.0.0",
+    "expo-constants": "^7.0.0",
+    "expo-font": "^7.0.0",
+    "expo-image-picker": "^7.0.0",
+    "expo-keep-awake": "^7.0.0",
+    "expo-permissions": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -14,21 +20,16 @@
     "react-native-reanimated": "~1.3.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "0.6.0",
-    "react-native-web": "^0.11.7",
-    "expo-constants": "^7.0.0",
-    "expo-font": "^7.0.0",
-    "expo-image-picker": "^7.0.0",
-    "expo-keep-awake": "^7.0.0",
-    "expo-permissions": "^7.0.0"
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "babel-jest": "24.9.0",
+    "babel-preset-expo": "^5.0.0",
     "jest": "24.9.0",
     "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
-    "react-test-renderer": "16.9.0",
-    "babel-preset-expo": "^5.0.0"
+    "react-test-renderer": "16.9.0"
   },
   "private": true
 }
