--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,4 +34,6 @@ target 'suli' do
 
   pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
 end
