--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/cameraroll": "1.4.0",
     "expo": "^35.0.0",
     "expo-constants": "^7.0.0",
